--add.. corba modules no longer required